	adjusting names of requests to Xlib compatible naming (xMPX*** instead of
	mpx***)


Files:
	Xi/exevents.c
	mpx/Makefile.am
	mpx/extinit.c
	mpx/getevbase.c
	mpx/getvers.c
	mpx/queryptr.c
	mpx/queryptr.h
	mpx/selectev.c
	mpx/listdev.h
	mpx/listdev.c
	include/mpxextinit.h

____________________________________________________________

Merging from master


== 01.12.06 ==

mpx:    SelectEvents and GetEventBase requests. 
	Some renaming and cleaning up in extinit.c
	MPXLastEvent added 

Xi:	ShouldFreeInputMask() from XI is not static any more, used in mpx

dix:	GetPointerEvents() allocates MPX event for MPX devices.
	DeliverDeviceEvents() caters for MPX devices.


Files:
	configure.ac
	mpx/Makefile.am
	mpx/extinit.c
	mpx/getvers.c
	mpx/getevbase.c
	mpx/getevbase.h
	mpx/listdev.c
	mpx/listdev.h
	mpx/mpxglobals.h
	mpx/selectev.c
	mpx/selectev.h
	mpx/mpxevents.h
	Xi/exevents.c
	dix/events.c
	dix/getevents.c
	include/mpxevents.h
	include/mpxextinit.h


== 30.11.06
mpx:    Adding ListDevices request. Minor changes, using
	MPXRestoreExtensionEvents() when resetting.

Files:
	mpx/Makefile.am
	mpx/extinit.c
	mpx/listdev.c
	mpx/listdev.h
	mpx/mpxextinit.h


== 29.11.06 ==
mpx:    Infrastructure for MPX extension, GetExtensionVersion request works.

Files:
	mpx/
	mpx/Makefile.am
	mpx/extinit.c
	mpx/getvers.c
	mpx/getvers.h
	mpxglobals.h
	mpx/selectev.c
	configure.ac
	Makefile.am
	os/utils.c
	mi/miinitext.c
	include/globals.h

== 28.11.06 ==
mi:     Bugfix: FreeCursor ignores negative refcounts.

mieq:   Bugfix: Motion notifies did overwrite DeviceMotionNotifies

Files:
	dix/cursor.c
	mi/mieq.c

____________________________________________________________

dix:	missing parameter to SetCursorPosition in CheckMotion ifndef MPX

mi:	missing include in misprite.c ifndef MPX

Files:
	dix/events.c
	mi/misprite.c


== 27.11.06 ==
mi:     free allocated memory in miDCCloseScreen and in miDCInitialize in case
	of errors.
	Some copyright notices.